# mcp_salesforce

./: .gitignore  Info.plist  README.md  extension.json  pyproject.toml  requirements.txt  run.py  setup.py
src/mcp_salesforce/: __init__.py  __main__.py  auth_state.py  config_handler.py  environment_selector.py  goose_hints.md  login_handler.py  query_validator.py  salesforce.py  server.py
src/mcp_salesforce/templates/: environment_selector.html  oauth_callback.html
